Fixed share and z-index issue

--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,7 @@ body {
     top: 45px;
     padding: 0 0 20px 0;
     margin: 0;
+    z-index: 1;
     background: rgb(255, 255, 255) transparent;
     /* nice browsers */
     background: rgba(255, 255, 255, 0.8);
@@ -113,6 +114,7 @@ body {
     width: 252px;
     max-width: 252px;
     min-width: 252px;
+    z-index: 2;
 }
 .sidebar .sidebar-container {
     background-color: #333638;
